--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "newrelic": ">=0.9"
     },
     "engines": {
-        "node": ">=0.8"
+        "node": ">=0.8",
+        "npm": ">= 1.1"
     }
 }
